Fix Perl warning box not showing up.
I've somehow messed up the template so that the warning about Perl errors
doesn't show up anymore. Couldn't find what I did, so in the end, had to copy
and paste the known working version to fix it.

Took the opportunity to style the warning boxes using the bootstrap alert
boxes.

--- a/htdocs/themes/math4/math4.css
+++ b/htdocs/themes/math4/math4.css
@@ -15,7 +15,7 @@
 
 /* Bootstrap Overrides */
 .container-fluid {
-	padding: 0.5em !important;
+	padding: 0.5em;
 }
 
 /* Banner */
@@ -93,12 +93,22 @@ h2.page-title {
 	float: right;
 }
 
+.breadcrumb {
+	border: 1px solid #e6e6e6;
+}
+
 /* Question nav section */
 .problem-nav {
+	width: 30%;
 	margin-bottom: 1em;
+	display: inline-block;
 }
 
 /* Message section */
+
+.Message {
+	display: inline-block;
+}
 
 .Message div, .Message span {
 	background-color:#eee;
@@ -128,6 +138,15 @@ ul.courses-list a:hover {
 	text-decoration: none;
 	background: #038;
 	color: white;
+}
+
+/* Classlist Editor */
+/* this table is a pain, it wants to be a certain width and it'll force you
+ * to scroll if you don't have that width, don't know how to fix it */
+table.classlist-table {
+	display: block;
+	max-width: 95%; /* prevent it from violating container-fluid's padding,
+					 only valid in a rare edge case */
 }
 
 /* Homework Sets */
@@ -671,8 +690,6 @@ table#grades_table pre{
 }
 
 /*mainform is in the library browser*/
-.classlist-table,
-.classlist-table label,
 .setlist-table,
 .setlist-table label,
 .user-list-form,
@@ -707,11 +724,6 @@ table#grades_table pre{
 
 .set-list-form select[multiple] {
     height:auto;
-}
-
-.classlist-table .table_checkbox, 
-.setlist-table .table_checkbox {
-    margin-right:1ex;
 }
 
 #problem_set_form .btn {
